
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 OCT 27c
  * in model/thermo/_generic/thermo.c
    - in _ionizationpot(), removed all excited species because the activation energies listed
      were not the ionization energies of these species
       

2025 OCT 27b
  * in model/thermo/_generic/enthalpy.c
    - fixed bugs in enthalpies of Ar species
    - added species Ar2
  * in model/thermo/_generic/thermo.c
    - added species Ar2 to speciesname
  * in model/thermo/_generic/thermo.hh
    - added species Ar2 to SMAP
  * in model/thermo/_thermo.h
    - added species Ar2
  * in model/transport/_Dixon-Lewis/transport.c
    - added species Ar2 to Peps and Psig
  * in model/chem/
    - added _Ar_Plasma_8s


2025 OCT 27a
  * in bin/Broslawski.wrp
    - made improvements so that this control file can be used with AirPlasma11s
  * in model/chem/_Air_Plasma_11s/chem.c
    - added user-defined Tminchem and Teminchem
  * in model/chem/_Air_Plasma_11s/chem.hh
    - added user-defined Tminchem and Teminchem


2025 OCT 24a
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - added code for N2VIBMODEL_RODRIGUEZ2026
  * in model/fluid/_Navier-Stokes_plasma/fluid.h
    - added constant N2VIBMODEL_RODRIGUEZ2026
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added _tauvt_Macheret()
    - added _tauvt_Gnoffo()
    - in find_Svib(), implemented the Gnoff N2 vib model
    - added find_tauvt_d1overtauvt()
    - in find_dSvib_dU(), implemented the Gnoff N2 vib model
    
  
2025 OCT 20a
  * in model/share/transport_share.c
    - added _mueN_Ar() 
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_Ar() and _Te_from_EoverN_Ar()


2025 OCT 17a
  * in model/thermo/_generic/enthalpy.c
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star